--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
       .dropdown {
         position: relative;
         display: inline-block;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
+        margin-top : 25px;
+        height: 30px;
+        width: 100%;
       }
 
       .dropbtn {
