--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         border: none;
         cursor: pointer;
         border-radius: 4px;
+        height: 30px;
+        width: 100%;
       }
 
       .dropbtn:hover {
