--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <a href="#" id="finca9">FINCA 09</a>
           <a href="#" id="finca13">FINCA 13</a>
           <a href="#" id="finca19">FINCA 19</a>
-          <a href="#" id="finca20">FINCA 20</a>
+          <a href="https://aroma-rh.github.io/F20/" id="finca20">FINCA 20</a>
           <a href="#" id="finca21">FINCA 21</a>
           <a href="#" id="finca22">FINCA 22</a>
         </div>
